# maritime-trajectory-anomaly-detection

./: .gitignore  README.md  pyproject.toml
src/: main.py  params_builder.py
src/anomaly_rules/: anomaly_rule_overspeeding.py  anomaly_rule_speed_abnormality.py
src/common/: filter_trajectories.py  obtain_and_process_traj.py
